# zsystem4esl

./: .gitignore  CMakeLists.txt  LICENSE  cmake.sh  tbuild.cfg  zsystem4eslConfig.cmake
cmake/: Packages.cmake
src/main/: CMakeLists.txt  lib.cpp
src/main/esl/system/: DefaultProcess.cpp  DefaultProcess.h  DefaultSignal.cpp  DefaultSignal.h  DefaultSignalManager.cpp  DefaultStacktraceFactory.cpp  DefaultStacktraceFactory.h  ZSProcess.cpp  ZSProcess.h  ZSSignalManager.cpp  ZSSignalManager.h  ZSStacktraceFactory.cpp  ZSStacktraceFactory.h
src/main/zsystem4esl/: Consumer.cpp  Consumer.h  ConsumerFile.cpp  ConsumerFile.h  FileDescriptor.cpp  FileDescriptor.h  Logger.h  Module.cpp  Module.h  Output.h  Plugin.cpp  Plugin.h  Process.cpp  Process.h  Producer.cpp  Producer.h  ProducerFile.cpp  ProducerFile.h  SignalHandler.cpp  SignalHandler.h  Stacktrace.cpp  Stacktrace.h
src/main/zsystem4esl/io/: FileDescriptor.cpp  FileDescriptor.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/main/zsystem4esl/stacktrace/: Stacktrace.cpp  Stacktrace.h
src/main/zsystem4esl/system/: Process.cpp  Process.h  SignalHandler.cpp  SignalHandler.h
src/main/zsystem4esl/system/process/: Consumer.cpp  Consumer.h  Process.cpp  Process.h  Producer.cpp  Producer.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h
src/main/zsystem4esl/system/signal/: DirectHandler.cpp  DirectHandler.h  Signal.cpp  Signal.h  ThreadHandler.cpp  ThreadHandler.h  ThreadManager.cpp  ThreadManager.h
src/main/zsystem4esl/system/stacktrace/: Stacktrace.cpp  Stacktrace.h  StacktraceFactory.cpp  StacktraceFactory.h
